testimonials takin away

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-8 col-xs-8">
-							<div class="topbar-time">Friday, Mar 13th 2015</div>
+							<div class="topbar-time">JSU International Programs</div>
 							<div class="topbar-toggler"><span class="fa fa-angle-down"></span></div>
 							<ul class="topbar-list topbar-menu">
 								<li><a href="#">Contact</a></li>
@@ -160,7 +160,7 @@
 								</li>
 								<!-- End International Programs -->
 
-								<!-- Stories -->
+								<!-- Stories
 								<li class="dropdown mega-menu-fullwidth">
 									<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
 										Stories
@@ -182,7 +182,7 @@
 															</ul>
 														</div>
 														<div class="col-md-5 md-margin-bottom-30">
-															<!-- Blog Thumb -->
+															-- Blog Thumb --
 															<div class="blog-thumb margin-bottom-20">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img16.jpg" alt="">
@@ -196,9 +196,9 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
+															-- End Blog Thumb --
 
-															<!-- Blog Thumb -->
+															-- Blog Thumb
 															<div class="blog-thumb margin-bottom-20">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img12.jpg" alt="">
@@ -212,9 +212,9 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
+															End Blog Thumb --
 
-															<!-- Blog Thumb -->
+															-- Blog Thumb 
 															<div class="blog-thumb">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img15.jpg" alt="">
@@ -228,10 +228,9 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
-														</div>
+														</div>															End Blog Thumb --
+															-- Blog Thumb
 														<div class="col-md-5">
-															<!-- Blog Thumb -->
 															<div class="blog-thumb margin-bottom-20">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img26.jpg" alt="">
@@ -245,9 +244,9 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
+															End Blog Thumb --
 
-															<!-- Blog Thumb -->
+															-- Blog Thumb --
 															<div class="blog-thumb margin-bottom-20">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img23.jpg" alt="">
@@ -261,9 +260,9 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
+															-- End Blog Thumb --
 
-															<!-- Blog Thumb -->
+															--Blog Thumb-- 
 															<div class="blog-thumb margin-bottom-30">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img24.jpg" alt="">
@@ -277,7 +276,7 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
+															--End Blog Thumb-- 
 														</div>
 													</div>
 												</div>
@@ -285,7 +284,7 @@
 										</li>
 									</ul>
 								</li>
-								<!-- End Stories -->
+								End Stories -->
 								
 								<!-- About -->
 								<li class="dropdown mega-menu-fullwidth">
@@ -366,16 +365,14 @@
 		<!-- End Interactive Slider v2 -->
 
 		<!-- Call to Action -->
-		<div class="call-action-v1 bg-color-light margin-bottom-40">
+		<div class="call-action-v1 bg-color-light margin-bottom-0">
 			<div class="container">
 				<div class="call-action-v1-box">
 					<div class="call-action-v1-in">
-					  <h3>We are known as <italic>"The Friendliest Campus in the South" do not hesitate and</italic>
-					  </h3>
-					  <h3>email us at <strong class="color-darker">intladmissions@jsu.edu</strong> or give us a call at <strong class="color-darker">+1 (256) 782 5303</strong></h3>
+					  <h1>We are known as <italic>"The Friendliest Campus in the South"</italic></h1>
 					</div>
 					<div class="call-action-v1-in inner-btn page-scroll">
-						<a href="apply.html" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block">Apply Today</a>
+						<a href="apply.html" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block">Contact us</a>
 					</div>
 				</div>
 			</div>
@@ -384,15 +381,15 @@
 
 		<!--=== Content Part ===-->
 		<div class="content-md">
-		<div class="headline-center margin-bottom-60">
-				  <h2>Become A Global Citizen</h2>
-				  <p>Please meet Sari and Jade for a complete introduction from Jacksonville State University programs offered to future incoming international students.</p>
+		<div class="headline-center margin-bottom-60 col-lg-6 col-lg-offset-3 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
+			<h2>Become A Global Citizen</h2>
+				  <h3>Please meet Sari and Jade for a complete introduction from Jacksonville State University International Programs offered to future incoming international students.</h3>
 				</div><!--/end Headline Center-->
 			<div class="container">
 				<div class="row margin-bottom-60">
 					<!-- Owl Carousel v5 -->
 					<div class="col-sm-12 col-md-12 col-offset-3 col-lg-12">
-						<div class="md-margin-bottom-40 col-md-offset-0 col-md-10 col-lg-8 col-lg-offset-2">
+						<div class="md-margin-bottom-40 col-md-10 col-lg-8 col-lg-offset-2 col-md-offset-1">
 					<div class="responsive-video">
 						<iframe src="https://www.youtube.com/embed/oZqWtAbe9_w" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 					</div>
@@ -419,7 +416,7 @@
 						<div class="col-md-6">
 							<br><br><br>
 							<div class="headline-left margin-bottom-30">
-							  <h2 class="headline-brd">JSU is going places</h2>
+								<h2 class="headline-brd"><strong>JSU is going places</strong></h2>
 							  <p>From the moment you step on the campus of Jacksonville State University you’ll discover that you are not the only one invested in your future.</p>
 							</div>
 							<ul class="list-unstyled lists-v2 margin-bottom-30">
@@ -436,9 +433,9 @@
 			<a name="Programs"></a>
 
 			<div class="container content-sm">
-				<div class="headline-center margin-bottom-60">
-				  <h2>Our Progams</h2>
-				  <p>Integer odio ligula, tincidunt id volutpat et, imperdiet eget mi. Quisque laoreet porttitor turpis sed <a href="#">fermentum</a>. Nullam sodales blandit nisi, tristique tempor nunc hendrerit at. Sed posuere mollis orci</p>
+				<div class="headline-center margin-bottom-40">
+				  <h2 class="col-lg-9 col-lg-offset-2">Our Progams</h2>
+				  <h3 class="col-lg-offset-2 col-lg-9 margin-bottom-40">Integer odio ligula, tincidunt id volutpat et, imperdiet eget mi. Quisque laoreet porttitor turpis sed <a href="#">fermentum</a>. Nullam sodales blandit nisi, tristique tempor nunc hendrerit at. Sed posuere mollis orci</h3>
 				</div><!--/end Headline Center-->
 
 				<!-- Portfolio Box -->
@@ -530,13 +527,13 @@
 				<div class="bg-color-light">
 				<div class="container content-sm">
 					<div class="row">
-						<div class="col-md-6 cold-md-offset-2 md-margin-bottom-10 col-lg-offset-1 col-lg-5">
+						<div class="col-md-6 cold-md-offset-2 md-margin-bottom-10 col-lg-offset-1 col-lg-5 col-sm-9 col-sm-offset-3 col-xs-8 col-xs-offset-2 col-md-offset-0">
 							<img alt="" src="assets/img/index-img/Chandni-Khadka.jpg" class="img-responsive">
 						</div>
 						<div class="col-md-6">
 							<br><br><br>
 							<div class="headline-left margin-bottom-30">
-							  <h2 class="headline-brd">A message from our Director</h2>
+								<h2 class="headline-brd"><strong>A message from our Director</strong></h2>
 							  <h4>We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are
 fortunate that we get to serve over 200 international students from Europe, Asia, North and South America, Africa, and the Middle East, are enrolled here...</h4>
 						  </div>
@@ -556,7 +553,7 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 			<footer class="footer">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-3 col-sm-6 column-one md-margin-bottom-50">
+						<div class="col-md-4 col-sm-4 column-one md-margin-bottom-50">
 							<a href="index.html"><img class="footer-logo" src="assets/img/logo1-white.png" alt=""></a>
 							<!--
 							<p class="margin-bottom-20">Jacksonville or JSU intl programs description add here</p>
@@ -570,7 +567,7 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 							<a href="#">intladmissions@jsu.edu</a>
 							-->
 						</div> 
-						<div class="col-md-3 col-sm-6 md-margin-bottom-50">
+						<div class="col-md-4 col-sm-4 md-margin-bottom-50">
 							<!--
 							<h2>Tags</h2>
 							<ul class="tags-v4 margin-bottom-40">
@@ -617,14 +614,14 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 								<h3><a href="#">Standard</a></h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
-						</div>							End Latest News -->
+						</div>							End Latest News --
 
 
 						<div class="col-md-3 col-sm-6">
 							<h2>Newsletter</h2>
 							<p><strong>Subscribe</strong> to our newsletter and stay up to date!</p><br>
 
-							<!-- Form Group -->
+							-- Form Group --
 							<div class="input-group margin-bottom-50">
 								<input class="form-control" type="email" placeholder="Enter email">
 								<div class="input-group-btn">
@@ -632,19 +629,18 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 								</div>
 							</div>
 						</div>
-							<!-- End Form Group -->
+							 End Form Group -->
 
-						<div class="col-md-3 col-sm-6">
+						<div class="col-md-4 col-sm-4">
 							<h2>Social Network</h2>
-							<p><strong>Follow Us</strong> If you want to be kept up to date about what’s going on, minute by minute!</p>
+							<p>If you want to be kept up to date about what’s going on, minute by minute!</p>
 							<br>
 
 							<!-- Social Icons -->
 							<ul class="social-icon-list margin-bottom-20">
 								<li><a href="#"><i class="rounded-x fa fa-twitter"></i></a></li>
 								<li><a href="#"><i class="rounded-x fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="rounded-x fa fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="rounded-x fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.instagram.com/jsu_international_programs/" target="_blank" title="Instagram social media"><i class="rounded-x fa fa-instagram"></i></a></li>
 							</ul>
 							<!-- End Social Icons -->
 						</div>
@@ -654,7 +650,7 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 			<footer class="copyright">
 				<div class="container">
 					<ul class="list-inline terms-menu">
-						<li>Last Review on January, 2017</li>
+						<li>Last Review on February, 2017</li>
 						<li>Made with <em class="fa fa-heart"></em><a href="http://www.jsu.edu/interactive/"> at JSU Interactive</a></li>
 					</ul>
 				</div>
