--- a/undergraduate.html
+++ b/undergraduate.html
@@ -53,7 +53,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-8 col-xs-8">
-							<div class="topbar-time">Friday, Mar 13th 2015</div>
+							<div class="topbar-time">JSU International Programs</div>
 							<div class="topbar-toggler"><span class="fa fa-angle-down"></span></div>
 							<ul class="topbar-list topbar-menu">
 								<li><a href="#">Contact</a></li>
@@ -160,7 +160,7 @@
 								</li>
 								<!-- End International Programs -->
 
-								<!-- Stories -->
+								<!-- Stories
 								<li class="dropdown mega-menu-fullwidth">
 									<a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown">
 										Stories
@@ -182,7 +182,7 @@
 															</ul>
 														</div>
 														<div class="col-md-5 md-margin-bottom-30">
-															<!-- Blog Thumb -->
+															-- Blog Thumb --
 															<div class="blog-thumb margin-bottom-20">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img16.jpg" alt="">
@@ -196,9 +196,9 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
+															-- End Blog Thumb --
 
-															<!-- Blog Thumb -->
+															-- Blog Thumb
 															<div class="blog-thumb margin-bottom-20">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img12.jpg" alt="">
@@ -212,9 +212,9 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
+															End Blog Thumb --
 
-															<!-- Blog Thumb -->
+															-- Blog Thumb 
 															<div class="blog-thumb">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img15.jpg" alt="">
@@ -228,10 +228,9 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
-														</div>
+														</div>															End Blog Thumb --
+															-- Blog Thumb
 														<div class="col-md-5">
-															<!-- Blog Thumb -->
 															<div class="blog-thumb margin-bottom-20">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img26.jpg" alt="">
@@ -245,9 +244,9 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
+															End Blog Thumb --
 
-															<!-- Blog Thumb -->
+															-- Blog Thumb --
 															<div class="blog-thumb margin-bottom-20">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img23.jpg" alt="">
@@ -261,9 +260,9 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
+															-- End Blog Thumb --
 
-															<!-- Blog Thumb -->
+															--Blog Thumb-- 
 															<div class="blog-thumb margin-bottom-30">
 																<div class="blog-thumb-hover">
 																	<img src="assets/img/main/img24.jpg" alt="">
@@ -277,7 +276,7 @@
 																	</ul>
 																</div>
 															</div>
-															<!-- End Blog Thumb -->
+															--End Blog Thumb-- 
 														</div>
 													</div>
 												</div>
@@ -285,7 +284,7 @@
 										</li>
 									</ul>
 								</li>
-								<!-- End Stories -->
+								End Stories -->
 								
 								<!-- About -->
 								<li class="dropdown mega-menu-fullwidth">
@@ -367,7 +366,7 @@
 				</div>
 		  </div><!--/row-->
 
-<div class="row tab-v3">
+<div class="row tab-v3 margin-bottom-40">
 						<div class="col-sm-3">
 							<ul class="nav nav-pills nav-stacked">
 							  <li class="active"><a href="#home-2" data-toggle="tab"><em class="fa fa-home"></em> Introduction</a></li>
@@ -645,16 +644,13 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 
 		<!--=== End Content Part ===-->
 
-<!-- Begin Content for Stories -->
+<!-- Begin Content for Stories
 			<div class="content-sm">
 			<div class="headline-center margin-bottom-60">
 			  <h2>What our students have to share</h2>
 				<p>Read some of the amazing stories that our international students and JSU have to share that you might find something that you will be interested.</p>
 			</div>
-				<!-- Title -->
 				<div class="heading margin-bottom-10">
-				<!--=== End of Title ===-->
-					<!-- Thumbnails v1 -->
 					<div class="row">
 						<div class="col-md-4 col-sm-4">
 							<div class="thumbnails thumbnail-style thumbnail-kenburn">
@@ -698,9 +694,10 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 								</div>
 							</div>
 						</div>
-					</div><!--/row-->
-			</div><!-- End Thumbnails v1 -->
-			</div><!-- End of Stories -->
+					</div>
+			</div>
+			</div>
+			End of Stories -->
 			
 			<!--Pagination-->
 					<div>
@@ -725,7 +722,7 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 			<footer class="footer">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-3 col-sm-6 column-one md-margin-bottom-50">
+						<div class="col-md-4 col-sm-4 column-one md-margin-bottom-50">
 							<a href="index.html"><img class="footer-logo" src="assets/img/logo1-white.png" alt=""></a>
 							<!--
 							<p class="margin-bottom-20">Jacksonville or JSU intl programs description add here</p>
@@ -739,7 +736,7 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 							<a href="#">intladmissions@jsu.edu</a>
 							-->
 						</div> 
-						<div class="col-md-3 col-sm-6 md-margin-bottom-50">
+						<div class="col-md-4 col-sm-4 md-margin-bottom-50">
 							<!--
 							<h2>Tags</h2>
 							<ul class="tags-v4 margin-bottom-40">
@@ -786,14 +783,14 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 								<h3><a href="#">Standard</a></h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							</div>
-						</div>							End Latest News -->
+						</div>							End Latest News --
 
 
 						<div class="col-md-3 col-sm-6">
 							<h2>Newsletter</h2>
 							<p><strong>Subscribe</strong> to our newsletter and stay up to date!</p><br>
 
-							<!-- Form Group -->
+							-- Form Group --
 							<div class="input-group margin-bottom-50">
 								<input class="form-control" type="email" placeholder="Enter email">
 								<div class="input-group-btn">
@@ -801,19 +798,18 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 								</div>
 							</div>
 						</div>
-							<!-- End Form Group -->
+							 End Form Group -->
 
-						<div class="col-md-3 col-sm-6">
+						<div class="col-md-4 col-sm-4">
 							<h2>Social Network</h2>
-							<p><strong>Follow Us</strong> If you want to be kept up to date about what’s going on, minute by minute!</p>
+							<p>If you want to be kept up to date about what’s going on, minute by minute!</p>
 							<br>
 
 							<!-- Social Icons -->
 							<ul class="social-icon-list margin-bottom-20">
 								<li><a href="#"><i class="rounded-x fa fa-twitter"></i></a></li>
 								<li><a href="#"><i class="rounded-x fa fa-facebook"></i></a></li>
-								<li><a href="#"><i class="rounded-x fa fa-linkedin"></i></a></li>
-								<li><a href="#"><i class="rounded-x fa fa-google-plus"></i></a></li>
+								<li><a href="https://www.instagram.com/jsu_international_programs/" target="_blank" title="Instagram social media"><i class="rounded-x fa fa-instagram"></i></a></li>
 							</ul>
 							<!-- End Social Icons -->
 						</div>
@@ -823,7 +819,7 @@ Transferring at least 24 academic credit   hours from accredited US institutions
 			<footer class="copyright">
 				<div class="container">
 					<ul class="list-inline terms-menu">
-						<li>Last Review on January, 2017</li>
+						<li>Last Review on February, 2017</li>
 						<li>Made with <em class="fa fa-heart"></em><a href="http://www.jsu.edu/interactive/"> at JSU Interactive</a></li>
 					</ul>
 				</div>
