add the contact list

--- a/about.html
+++ b/about.html
@@ -364,7 +364,7 @@
 		<!--=== Content Part ===-->
 		<div class="container content">
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-6 col-sm-6">
 					<h2 class="title-v2">Welcome Message from the International Programs Director</h2>
 					<p>We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are
 fortunate that we get to serve over 200 international students from Europe, Asia, North and South
@@ -384,7 +384,7 @@ each individual students with respect and care no matter where they come from. A
 become part of one big Gamecock Family once they come to JSU.
 I look forward to seeing each one of you.</p><br><p>Chandni Khadka,<br>Director International Programs<br>Jacksonville State University</p>
 				</div>
-				<div class="col-md-6 col-lg-4 col-lg-offset-1">
+				<div class="col-lg-4 col-lg-offset-1 col-md-4 col-md-offset-1 col-sm-offset-1 col-sm-4">
 					<img class="img-responsive" src="assets/img/index-img/Chandni-Khadka.jpg" alt="">
 				</div>
 			</div>
