--- a/index.html
+++ b/index.html
@@ -544,6 +544,58 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 			</div>
 		</div>
 		<!-- End Testimonials Part -->
+		
+		<!--=== Content Part ===-->
+		<div class="container content">
+			<div class="row margin-bottom-30">
+				<div class="col-md-9 mb-margin-bottom-30 col-lg-12">
+					<div class="headline"><h2>Contact Form</h2></div>
+					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
+
+					<form action="assets/php/sky-forms-pro/demo-contacts-process.php" method="post" id="sky-form3" class="sky-form contact-style">
+					
+					<!--
+						<fieldset class="no-padding">
+							<label>Name <span class="color-red">*</span></label>
+							<div class="row sky-space-20">
+								<div class="col-md-7 col-md-offset-0">
+									<div>
+										<input type="text" name="name" id="name" class="form-control">
+									</div>
+								</div>
+							</div>
+
+							<label>Email <span class="color-red">*</span></label>
+							<div class="row sky-space-20">
+								<div class="col-md-7 col-md-offset-0">
+									<div>
+										<input type="text" name="email" id="email" class="form-control">
+									</div>
+								</div>
+							</div>
+
+							<label>Message <span class="color-red">*</span></label>
+							<div class="row sky-space-20">
+								<div class="col-md-11 col-md-offset-0">
+									<div>
+										<textarea rows="8" name="message" id="message" class="form-control"></textarea>
+									</div>
+								</div>
+							</div>
+
+							<p><button type="submit" class="btn-u">Send Message</button></p>
+						</fieldset>
+
+						<div class="message">
+							<i class="rounded-x fa fa-check"></i>
+							<p>Your message was successfully sent!</p>
+						</div> -->
+					</form>
+				</div><!--/col-md-9-->
+			</div><!--/row-->
+			<!-- End Owl Clients v1 -->
+		</div><!--/container-->
+		<!--=== End Content Part ===-->
  
 <!-- InstanceEndEditable -->
 	
