update latest home page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
@@ -553,6 +554,42 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
 
 					<form action="assets/php/sky-forms-pro/demo-contacts-process.php" method="post" id="sky-form3" class="sky-form contact-style">
+					
+					<div id="wufoo-p1khln4w0ufxmk5">
+
+</div>
+
+<script type="text/javascript">var p1khln4w0ufxmk5;(function(d, t) {
+
+var s = d.createElement(t), options = {
+
+'userName':'jsuweb',
+
+'formHash':'p1khln4w0ufxmk5',
+
+'autoResize':true,
+
+'height':'954',
+
+'async':true,
+
+'host':'wufoo.com',
+
+'header':'hide',
+
+'ssl':true};
+
+s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+
+s.onload = s.onreadystatechange = function() {
+
+var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+
+try { p1khln4w0ufxmk5 = new WufooForm();p1khln4w0ufxmk5.initialize(options);p1khln4w0ufxmk5.display(); } catch (e) {}};
+
+var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+
+})(document, 'script');</script>
 					
 					<!--
 						<fieldset class="no-padding">
