updates on the home page

--- a/index.html
+++ b/index.html
@@ -353,11 +353,11 @@
 		<div class="interactive-slider-v2 interactive-slider-v2-md img-v3">
 			<div class="container">
 				<h1 class="cd-headline letters type">
-					<span>JSU is</span>
+					<span>JSU</span>
 					<span class="cd-words-wrapper">
-						<b class="is-visible">diverse</b>
-						<b>Awesome</b>
-						<b>International</b>
+						<b class="is-visible">is Global</b>
+						<b>Welcomes International Students</b>
+						<b>embraces diversity</b>
 					</span>
 				</h1>
 				<p>Welcome to the International Programs at<br> Jacksonville State University</p>
@@ -373,7 +373,7 @@
 					  <h1>We are known as <italic>"The Friendliest Campus in the South"</italic></h1>
 					</div>
 					<div class="call-action-v1-in inner-btn page-scroll">
-						<a href="apply.html" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block">Contact us</a>
+						<a href="Contact-us" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block">Contact us</a>
 					</div>
 				</div>
 			</div>
@@ -431,8 +431,9 @@
 					</div>
 				</div>
 			</div>
+			
+			
 			<a name="Programs"></a>
-
 			<div class="container content-sm">
 				<div class="headline-center margin-bottom-40">
 				  <h2 class="col-lg-9 col-lg-offset-2">Our Progams</h2>
@@ -525,18 +526,18 @@
 				</div>
 			</div>
 			 End Flat Testimonials -->
+			 	<a name="Contact-us"></a>
 				<div class="bg-color-light">
 				<div class="container content-sm">
 					<div class="row">
 						<div class="col-md-6 cold-md-offset-2 md-margin-bottom-10 col-lg-offset-1 col-lg-5 col-sm-9 col-sm-offset-3 col-xs-8 col-xs-offset-2 col-md-offset-0">
-							<img alt="" src="assets/img/index-img/Chandni-Khadka.jpg" class="img-responsive">
+						<img alt="Chandni Khadka, Directo of International Programs at Jacksonville State University, Profile Picture" title="Chandni Khadka, Profile Picture" src="assets/img/index-img/Chandni-Khadka.jpg" class="img-responsive">
 						</div>
 						<div class="col-md-6">
 							<br><br><br>
 							<div class="headline-left margin-bottom-30">
 								<h2 class="headline-brd"><strong>A message from our Director</strong></h2>
-							  <h4>We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are
-fortunate that we get to serve over 200 international students from Europe, Asia, North and South America, Africa, and the Middle East, are enrolled here...</h4>
+							  <h4>We at Jacksonville State University recognize and appreciate the fact that International students like yourself add tremendous value to the campus experience that each student at JSU can have. We are fortunate that we get to serve over 200 international students from Europe, Asia, North and South America, Africa, and the Middle East, are enrolled here...</h4>
 						  </div>
 							<a class="btn-u btn-brd btn-brd-hover btn-u-dark" href="about.html">Click to continue</a>
 						</div><!--/end row-->
@@ -549,7 +550,7 @@ fortunate that we get to serve over 200 international students from Europe, Asia
 		<!--=== Content Part ===-->
 		<div class="container content">
 			<div class="row margin-bottom-30">
-				<div class="col-md-9 mb-margin-bottom-30 col-lg-12">
+				<div class="col-md-9 mb-margin-bottom-30 col-lg-offset-1 col-lg-10 col-md-offset-2">
 					<div class="headline"><h2>Contact Form</h2></div>
 					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
 
