new changes on index

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 					  <h1>We are known as <italic>"The Friendliest Campus in the South"</italic></h1>
 					</div>
 					<div class="call-action-v1-in inner-btn page-scroll">
-						<a href="Contact-us" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block">Contact us</a>
+						<a href="Contact-us" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block" title="Link to contact us form" alt="click and fill up contact form">Contact us</a>
 					</div>
 				</div>
 			</div>
@@ -392,7 +392,7 @@
 					<div class="col-sm-12 col-md-12 col-offset-3 col-lg-12">
 						<div class="md-margin-bottom-40 col-md-10 col-lg-8 col-lg-offset-2 col-md-offset-1">
 					<div class="responsive-video">
-						<iframe src="https://www.youtube.com/embed/oZqWtAbe9_w" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+						<iframe src="https://www.youtube.com/embed/uQh-ddoAP34" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 					</div>
 						</div>
 					</div>
