changes made under index

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 					<div class="col-sm-12 col-md-12 col-offset-3 col-lg-12">
 						<div class="md-margin-bottom-40 col-md-10 col-lg-8 col-lg-offset-2 col-md-offset-1">
 					<div class="responsive-video">
-						<iframe src="https://www.youtube.com/embed/uQh-ddoAP34" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+						<iframe src="https://www.youtube.com/embed/uQh-ddoAP34" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen title="JSU International Programs video Introduction" alt="JSU International Progams video explaning the different programs offered"></iframe>
 					</div>
 						</div>
 					</div>
@@ -400,10 +400,10 @@
 					<div class="col-sm-12 col-md-6 col-lg-6 col-lg-offset-3">
 	<div class="headline-center margin-bottom-60">
 				</div><!--/end Headline Center-->
-				<a href="eli.html"><button class="btn-u text-uppercase" type="button">ELI</button></a>
-				<a href="ihop.html"><button class="btn-u text-uppercase" type="button">International House</button></a>
-				<a href="undergraduate.html"><button class="btn-u text-uppercase" type="button">Undergraduate</button></a>
-				<a href="graduate.html"><button class="btn-u text-uppercase" type="button">Graduate</button></a>
+				<a href="eli.html" title="ELI Programs" alt="Redirect to ELI Programs"><button class="btn-u text-uppercase" type="button">ELI</button></a>
+				<a href="ihop.html" title="International House" alt="Redirect to International Programs"><button class="btn-u text-uppercase" type="button">International House</button></a>
+				<a href="undergraduate.html" title="Undergraduate Programs" alt="Redirect to Undergraduate Programs"><button class="btn-u text-uppercase" type="button">Undergraduate</button></a>
+				<a href="graduate.html" title="Graduate Programs" alt="Redirect to Graduate Programs"><button class="btn-u text-uppercase" type="button">Graduate</button></a>
 					</div>
 				</div><!--/end row-->
 			</div><!--/end container-->
@@ -412,7 +412,7 @@
 				<div class="container content-sm">
 					<div class="row">
 						<div class="col-md-6 md-margin-bottom-10">
-							<img alt="" src="assets/img/index-img/JSU International Students.jpg" class="img-responsive">
+							<img alt="JSU Students walking on campus" title="JSU Students Walking on campus" src="assets/img/index-img/JSU International Students.jpg" class="img-responsive">
 						</div>
 						<div class="col-md-6">
 							<br><br><br>
@@ -426,7 +426,7 @@
 								<li><i class="fa fa-check"></i> 2 hours from Atlanta, Georgia and 1.5 hours from Birmingham, Alabama</li>
 								<li><i class="fa fa-check"></i> University has accredited programs such as the Association to Advance Collegiate Schools of Businesss, International (AACSB)</li>
 							</ul>
-							<a class="btn-u btn-brd btn-brd-hover btn-u-dark" href="about.html">Learn More About JSU</a>
+							<a class="btn-u btn-brd btn-brd-hover btn-u-dark" href="about.html" title="Learn more about JSU" alt="Redirect to learn more about JSU">Learn More About JSU</a>
 						</div><!--/end row-->
 					</div>
 				</div>
@@ -444,7 +444,7 @@
 				<ul class="list-unstyled">
 					<li class="col-sm-6 md-margin-bottom-50">
 						<a href="eli.html" title="English Language Institute" class="thumbnail">
-							<img alt="" src="assets/img/index-img/JSU ELI.jpg" class="full-width img-responsive">
+							<img alt="ELI Students studying on campus" title="ELI Programs Thumbnail" src="assets/img/index-img/JSU ELI.jpg" class="full-width img-responsive">
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">English Language Institue</h3>
@@ -453,16 +453,16 @@
 					</li>
 					<li class="col-sm-6 md-margin-bottom-50">
 						<a href="ihop.html" title="International House Program" class="thumbnail">
-							<img alt="" src="assets/img/index-img/JSU International-House.jpg" class="full-width img-responsive">
+						<img alt="International House student at their Annual UN Day Tea picture" title="International Programs Thumbnail" src="assets/img/index-img/JSU International-House.jpg" class="full-width img-responsive">
 						</a>
 						<div class="headline-left margin-bottom-10">
-						  <h3 class="headline-brd">International House Program</h3>
+					  	<h3 class="headline-brd">International House Program</h3>
 						</div>
 						<p>A home away from home. The International House Program for 70+ years has been the hub for internationalism at JSU bringing international and Americans scholars to bind together. <a href="ihop.html" title="International House Program" target="_self">Learn more</a></p>
 					</li>
 					<li class="col-sm-6 md-margin-bottom-50">
 						<a href="undergraduate.html" title="Project Three" class="thumbnail">
-							<img src="assets/img/index-img/JSU Undergraduate.jpg" class="full-width img-responsive">
+							<img alt="Undergraduate student at the library" title="Undergraduate Programs at JSU thumbnail" src="assets/img/index-img/JSU Undergraduate.jpg" class="full-width img-responsive">
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">Undergraduate</h3>
@@ -471,7 +471,7 @@
 					</li>
 					<li class="col-sm-6">
 						<a href="graduate.html" title="Project Three" class="thumbnail">
-						<img alt="" src="assets/img/index-img/JSU Graduate.jpg" class="full-width img-responsive">
+						<img alt="Graduate student at the MBA Program at JSU" title="Graduate Progams at JSU Thumbnail" src="assets/img/index-img/JSU Graduate.jpg" class="full-width img-responsive">
 						</a>
 						<div class="headline-left margin-bottom-10">
 						  <h3 class="headline-brd">Graduate</h3>
@@ -531,7 +531,7 @@
 				<div class="container content-sm">
 					<div class="row">
 						<div class="col-md-6 cold-md-offset-2 md-margin-bottom-10 col-lg-offset-1 col-lg-5 col-sm-9 col-sm-offset-3 col-xs-8 col-xs-offset-2 col-md-offset-0">
-						<img alt="Chandni Khadka, Directo of International Programs at Jacksonville State University, Profile Picture" title="Chandni Khadka, Profile Picture" src="assets/img/index-img/Chandni-Khadka.jpg" class="img-responsive">
+						<img alt="Chandni Khadka, Director of International Programs at Jacksonville State University, Profile Picture" title="Chandni Khadka, Profile Picture" src="assets/img/index-img/Chandni-Khadka.jpg" class="img-responsive">
 						</div>
 						<div class="col-md-6">
 							<br><br><br>
