--- a/index.html
+++ b/index.html
@@ -432,7 +432,6 @@
 				</div>
 			</div>
 			
-			
 			<a name="Programs"></a>
 			<div class="container content-sm">
 				<div class="headline-center margin-bottom-40">
@@ -453,7 +452,7 @@
 					</li>
 					<li class="col-sm-6 md-margin-bottom-50">
 						<a href="ihop.html" title="International House Program" class="thumbnail">
-						<img alt="International House student at their Annual UN Day Tea picture" title="International Programs Thumbnail" src="assets/img/index-img/JSU International-House.jpg" class="full-width img-responsive">
+						<img alt="International House student at their Annual UN Day Tea picture" title="International House Program Thumbnail" src="assets/img/index-img/JSU International-House.jpg" class="full-width img-responsive">
 						</a>
 						<div class="headline-left margin-bottom-10">
 					  	<h3 class="headline-brd">International House Program</h3>
