update changes on website

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 					  <h1>We are known as <italic>"The Friendliest Campus in the South"</italic></h1>
 					</div>
 					<div class="call-action-v1-in inner-btn page-scroll">
-						<a href="Contact-us" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block" title="Link to contact us form" alt="click and fill up contact form">Contact us</a>
+						<a href="#Contact-us-form" id="Contact-us-form" class="btn-u btn-u-lg btn-brd btn-brd-width-2 btn-brd-hover btn-u-dark btn-u-block" title="Link to contact us form" alt="click and fill up contact form">Contact us</a>
 					</div>
 				</div>
 			</div>
@@ -436,7 +436,7 @@
 			<div class="container content-sm">
 				<div class="headline-center margin-bottom-40">
 				  <h2 class="col-lg-9 col-lg-offset-2">Our Progams</h2>
-				  <h3 class="col-lg-offset-2 col-lg-9 margin-bottom-40">Integer odio ligula, tincidunt id volutpat et, imperdiet eget mi. Quisque laoreet porttitor turpis sed <a href="#">fermentum</a>. Nullam sodales blandit nisi, tristique tempor nunc hendrerit at. Sed posuere mollis orci</h3>
+				  <h3 class="col-lg-offset-2 col-lg-9 margin-bottom-40">JSU is excited and honored to be home for international students from all over the world. We invite prospective international students to consider us for further education. Find below information about different programs we offer.</h3>
 				</div><!--/end Headline Center-->
 
 				<!-- Portfolio Box -->
@@ -525,7 +525,6 @@
 				</div>
 			</div>
 			 End Flat Testimonials -->
-			 	<a name="Contact-us"></a>
 				<div class="bg-color-light">
 				<div class="container content-sm">
 					<div class="row">
@@ -547,6 +546,7 @@
 		<!-- End Testimonials Part -->
 		
 		<!--=== Content Part ===-->
+	    <a href="#Contact-us-form"></a>
 		<div class="container content">
 			<div class="row margin-bottom-30">
 				<div class="col-md-9 mb-margin-bottom-30 col-lg-offset-1 col-lg-10 col-md-offset-2">
