--- a/index.html
+++ b/index.html
@@ -356,8 +356,8 @@
 					<span>JSU</span>
 					<span class="cd-words-wrapper">
 						<b class="is-visible">is Global</b>
-						<b>Welcomes International Students</b>
-						<b>embraces diversity</b>
+						<b>Welcomes You</b>
+						<b>Values You</b>
 					</span>
 				</h1>
 				<p>Welcome to the International Programs at<br> Jacksonville State University</p>
@@ -551,8 +551,6 @@
 			<div class="row margin-bottom-30">
 				<div class="col-md-9 mb-margin-bottom-30 col-lg-offset-1 col-lg-10 col-md-offset-2">
 					<div class="headline"><h2>Contact Form</h2></div>
-					<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
-
 					<form action="assets/php/sky-forms-pro/demo-contacts-process.php" method="post" id="sky-form3" class="sky-form contact-style">
 					
 					<div id="wufoo-p1khln4w0ufxmk5">
